chp15_statefulsets/set1524_pvc_retention_policy/SETUP/common/ing.kiada.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiada
  namespace: chp15-set1524
spec:
  tls:
  - secretName: tls-example-com
    hosts:
    - "*.example.com"
  rules:
  - host: kiada.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kiada
            port:
              name: http
  - host: api.example.com
    http:
      paths:
      - path: /quote
        pathType: Exact
        backend:
          service:
            name: quote
            port:
              name: http
      - path: /questions
        pathType: Prefix
        backend:
          service:
            name: quiz
            port:
              name: http
